feature: nice display

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/knowbee/gcopy/issues"
   },
-  "homepage": "https://github.com/knowbee/gcopy#readme"
+  "homepage": "https://github.com/knowbee/gcopy#readme",
+  "devDependencies": {
+    "ora": "^4.0.3"
+  }
 }
